# swconfig

./: Makefile.am  configure.ac  release.mk
scripts/: make_release.sh  swconfig_version.sh
